# Lab--7.1

./: CMakeLists.txt  Student.cpp  Student.h  StudentFirstTerm.cpp  StudentFirstTerm.h  StudentSecondTerm.cpp  StudentSecondTerm.h  TestsForStudentClassAndMethods.cpp  main.cpp
Classes and methods/Student/: Student.cpp
Classes and methods/Student after first term/: StudentFirstTerm.h
Classes and methods/Student after second term/: StudentSecondTerm.h
Tests/: AfterFirstTerm.cpp  AfterSecondTerm.cpp  TestsForStudent.cpp
